# CPP-numerical-computing

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cpp.yml
_import/: q1.cpp  q2 copy.cpp  team.hpp
include/: player.hpp  q234.hpp
include/common/: interp.hpp
scripts/: organize.sh
src/: q3.cpp  q4.cpp  rk4 (1).cpp
src/common/: interp.cpp
src/tracking_kinematics/: main_tracking.cpp
